--- a/src/App.scss
+++ b/src/App.scss
@@ -55,17 +55,28 @@ variables
   }
 }
 
+
 /***************
-Body
+Html/Body
 ****************/
-body{
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
+/***************
+Main wrapper
+****************/
+.main-wrapper{
   display: grid;
+  min-height: 100%;
   grid-template-columns: 1fr;
-  grid-template-rows: 350px 1fr 200px;
+  grid-template-rows: 350px 1fr 100px;
   grid-template-areas: "header" "body" "footer";
   font-family: var(--font-family-sans-serif);
   letter-spacing: 0.025em;
   background-color: var(--background-color);
+  grid-template-columns: 100%;
 
 }
 
@@ -136,6 +147,7 @@ Footer
 footer{
     background:url(./img/pandora-background.png) no-repeat bottom center, linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
     background-size: cover;
+
   }
 
   table, tr, th, td {
