--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ variables
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --darkgreen:#009994;
+  --darkgreen: #009994;
   --teal: #20c997;
   --cyan: #17a2b8;
   --white: #fff;
@@ -25,93 +25,162 @@ variables
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
-  --darkgrey:#222222;
+  --darkgrey: #222222;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif:Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  --background-color: #efefef; }
+  --font-family-sans-serif: Roboto, "Helvetica Neue", Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --background-color: #efefef;
+}
 
 .fw-400 {
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 .fw-500 {
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 .fw-700 {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 /***************
 Html/Body
 ****************/
-html, body {
+html,
+body {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+}
 
 /***************
 Main wrapper
 ****************/
 .main-wrapper {
+  display: -ms-grid;
   display: grid;
   min-height: 100%;
+  -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
+  -ms-grid-rows: 350px 1fr 100px;
   grid-template-rows: 350px 1fr 100px;
   grid-template-areas: "header" "body" "footer";
   font-family: var(--font-family-sans-serif);
   letter-spacing: 0.025em;
   background-color: var(--background-color);
-  grid-template-columns: 100%; }
+  -ms-grid-columns: 100%;
+  grid-template-columns: 100%;
+}
 
 /***************
 Header
 ****************/
 header {
-  background: url(./img/pandora-background.png) no-repeat bottom center, linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
-  background-size: cover; }
+  background: url(./img/pandora-background.png) no-repeat bottom center,
+    -webkit-gradient(linear, right top, left top, from(var(--darkgrey)), to(var(--darkgreen)));
+  background: url(./img/pandora-background.png) no-repeat bottom center,
+    linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
+  background-size: cover;
+}
 
 .section03 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
   grid-area: body;
   padding: 20px;
   text-align: justify;
-  max-width: 50%; }
+  max-width: 50%;
+}
 
 .container-menu {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 200px 1fr;
   grid-template-columns: 200px 1fr;
+  -ms-grid-rows: 80px;
   grid-template-rows: 80px;
   grid-template-areas: "logo" "main-menu";
-  align-items: center; }
-  .container-menu nav li a {
-    color: var(--white);
-    font-size: 16px;
-    text-decoration: none; }
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.container-menu nav li a {
+  color: var(--white);
+  font-size: 16px;
+  text-decoration: none;
+}
 
 .container-welcome {
-  margin-top: 20px; }
-  .container-welcome * {
-    color: var(--white); }
-  .container-welcome h1, .container-welcome h2 {
-    margin-bottom: 10px; }
-  .container-welcome h2 {
-    margin-bottom: 20px; }
-  .container-welcome p {
-    white-space: pre-line;
-    margin-top: -1em;
-    font-size: 14px;
-    line-height: 1.5; }
+  margin-top: 20px;
+}
+
+.container-welcome * {
+  color: var(--white);
+}
+
+.container-welcome h1,
+.container-welcome h2 {
+  margin-bottom: 10px;
+}
+
+.container-welcome h2 {
+  margin-bottom: 20px;
+}
+
+.container-welcome p {
+  white-space: pre-line;
+  margin-top: -1em;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+/***************
+Section buttons / links
+****************/
+.main-content a {
+  display: inline-block;
+  padding: 10px 25px;
+  background: #3490dc;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  margin: 0 5px;
+}
+
+section a:hover,
+section a:active,
+section a:focus {
+  background: #3490dc;
+}
 
 /***************
 Footer
 ****************/
 footer {
-  background: url(./img/pandora-background.png) no-repeat bottom center, linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
-  background-size: cover; }
+  background: url(./img/pandora-background.png) no-repeat bottom center,
+    -webkit-gradient(linear, right top, left top, from(var(--darkgrey)), to(var(--darkgreen)));
+  background: url(./img/pandora-background.png) no-repeat bottom center,
+    linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
+  background-size: cover;
+}
 
-table, tr, th, td {
+table,
+tr,
+th,
+td {
   border: 1px solid #222;
-  border-collapse: collapse; }
+  border-collapse: collapse;
+}
 
-th, td {
-  padding: 10px; }
+th,
+td {
+  padding: 10px;
+}
+/*# sourceMappingURL=App.css.map */
