--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ header {
   background: url(./img/pandora-background.png) no-repeat bottom center,
     linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
   background-size: cover;
+  grid-column: 1 / span 2;
 }
 
 .section03 {
@@ -142,7 +143,7 @@ header {
 /***************
 Section buttons / links
 ****************/
-.main-content a {
+/* .main-content a {
   display: inline-block;
   padding: 10px 25px;
   background: #3490dc;
@@ -158,7 +159,7 @@ section a:hover,
 section a:active,
 section a:focus {
   background: #3490dc;
-}
+} */
 
 /***************
 Footer
@@ -169,6 +170,7 @@ footer {
   background: url(./img/pandora-background.png) no-repeat bottom center,
     linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
   background-size: cover;
+  grid-column: 1 / span 2;
 }
 
 table,
