--- a/src/App.scss
+++ b/src/App.scss
@@ -143,21 +143,21 @@ header {
 /***************
 Section buttons / links
 ****************/
-section a {
-  display: inline-block;
-  padding: 10px 25px;
-  background: blue;
-  text-align: center;
-  color: #ffffff;
-  text-decoration: none;
-  transition: all 0.2s ease-in-out;
+// section a {
+//   display: inline-block;
+//   padding: 10px 25px;
+//   background: blue;
+//   text-align: center;
+//   color: #ffffff;
+//   text-decoration: none;
+//   transition: all 0.2s ease-in-out;
 
-  &:hover,
-  &:active,
-  &:focus {
-    background: darken(blue, 10%);
-  }
-}
+//   &:hover,
+//   &:active,
+//   &:focus {
+//     background: darken(blue, 10%);
+//   }
+// }
 
 /***************
 Footer
