--- a/src/App.scss
+++ b/src/App.scss
@@ -103,7 +103,9 @@ header {
     grid-template-rows: 80px;
     grid-template-areas: "logo" "main-menu";
     align-items: center;
-
+    .toggle1 {
+      display: none;
+    }
     //nav
     nav {
       li {
@@ -179,4 +181,89 @@ td {
 th,
 td {
   padding: 10px;
+}
+/***************
+Hamburger
+****************/
+.toggle1 {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #fff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+/***************
+Contact Forms
+****************/
+
+/***************
+Media Query
+****************/
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+  .container {
+    &-menu {
+      padding: 0 15px;
+
+      nav {
+        opacity: 0;
+        position: fixed;
+        background: #fff;
+        height: auto;
+        padding: 25px 0;
+        width: 100%;
+        top: 80px;
+        right: -100%;
+        transition: all 0.25s ease-in-out;
+        flex-direction: column;
+        justify-content: flex-start;
+        box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+
+        li {
+          a {
+            color: #333;
+            padding: 15px;
+            display: block;
+          }
+        }
+      }
+
+      .toggle1 {
+        display: inline;
+        position: absolute;
+        right: 15px;
+        top: 20px;
+      }
+    }
+  }
+
+  .change {
+    .container-menu {
+      nav {
+        opacity: 1;
+        right: 0px;
+      }
+    }
+  }
 }
