--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,33 @@ html,
 body {
   height: 100%;
   width: 100%;
+  line-height: 1.5;
+}
+
+/***************
+Typo
+****************/
+.main-content {
+  padding-bottom: 25px;
+  border: none !important;
+}
+
+.main-content h1,
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6 {
+  margin-bottom: 15px;
+}
+
+.main-content h1:not(:first-child),
+.main-content h2:not(:first-child),
+.main-content h3:not(:first-child),
+.main-content h4:not(:first-child),
+.main-content h5:not(:first-child),
+.main-content h6:not(:first-child) {
+  margin-top: 15px;
 }
 
 /***************
@@ -66,8 +93,8 @@ Main wrapper
   min-height: 100%;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 350px 1fr 100px;
-      grid-template-rows: 350px 1fr 100px;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
       grid-template-areas: "header" "body" "footer";
   font-family: var(--font-family-sans-serif);
   letter-spacing: 0.025em;
@@ -83,15 +110,8 @@ header {
   background: url(./img/pandora-background.png) no-repeat bottom center, -webkit-gradient(linear, right top, left top, from(var(--darkgrey)), to(var(--darkgreen)));
   background: url(./img/pandora-background.png) no-repeat bottom center, linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
   background-size: cover;
-}
-
-.section03 {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: body;
-  padding: 20px;
-  text-align: justify;
-  max-width: 50%;
+  padding-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 .container-menu {
@@ -136,14 +156,41 @@ header {
 
 .container-welcome p {
   white-space: pre-line;
-  margin-top: -1em;
   font-size: 14px;
   line-height: 1.5;
+}
+
+p {
+  line-height: 1.5;
+  margin-bottom: 8px;
+}
+
+section {
+  padding: 15px 0;
+}
+
+.notices blockquote {
+  margin: 10px 0;
+}
+
+.notices hr {
+  border: none;
+  height: 1px;
+  background-color: #888;
+  margin: 15px 0;
+}
+
+.welcome {
+  display: none;
 }
 
 /***************
 Section buttons / links
 ****************/
+.bg-green {
+  background-color: #125a57;
+}
+
 /***************
 Footer
 ****************/
@@ -151,6 +198,7 @@ footer {
   background: url(./img/pandora-background.png) no-repeat bottom center, -webkit-gradient(linear, right top, left top, from(var(--darkgrey)), to(var(--darkgreen)));
   background: url(./img/pandora-background.png) no-repeat bottom center, linear-gradient(-90deg, var(--darkgrey), var(--darkgreen));
   background-size: cover;
+  color: var(--white);
 }
 
 table,
@@ -207,6 +255,13 @@ Media Query
 ****************/
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+  .container {
+    padding-left: 10px;
+    padding-right: 8px;
+  }
+  .container-welcome {
+    padding: 0px 30px;
+  }
   .container-menu {
     padding: 0 15px;
   }
@@ -230,6 +285,7 @@ Media Query
             justify-content: flex-start;
     -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
             box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+    z-index: 99999;
   }
   .container-menu nav li a {
     color: #333;
@@ -245,6 +301,48 @@ Media Query
   .change .container-menu nav {
     opacity: 1;
     right: 0px;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .welcome {
+    display: block;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .container-menu {
+    padding: 0 15px 0 0;
+  }
+  .container-welcome {
+    padding: 0px 15px;
+  }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
+  .container-welcome p,
+  button {
+    display: none;
+  }
+  section {
+    padding: 15px;
+  }
+  header {
+    padding-bottom: 10px;
+  }
+  .container-menu {
+    padding: 0 15px 0 0;
+  }
+  .container-welcome {
+    padding: 0px 15px;
+  }
+  .container-welcome h1 {
+    font-size: 22px;
+  }
+  .container-welcome h2 {
+    font-size: 20px;
+    margin: 0px;
   }
 }
 /*# sourceMappingURL=App.css.map */
