--- a/src/App.css
+++ b/src/App.css
@@ -321,8 +321,7 @@ Media Query
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
-  .container-welcome p,
-  button {
+  .container-welcome > button {
     display: none;
   }
   section {
