--- a/src/App.scss
+++ b/src/App.scss
@@ -325,8 +325,7 @@ Media Query
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 640px) {
-  .container-welcome p,
-  button {
+  .container-welcome > button {
     display: none;
   }
 
